--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Serif&family=Roboto:wght@700&family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,12 +12,38 @@
     <!--header-->
     <header>
         <section class="top-bar debugh">
-            <!--<img src="img/logo-small.png" class="logo debug" alt="logo">-->
-            <section class="content-top-bar-l debug"></section>
-            <section class="content-top-bar-r debug"></section>
+            <section class="top-bar-section top-bar-section-l debugh">
+                <img src="img/logo-small.png" class="logo debug" alt="logo">
+            </section>
+            <section class="top-bar-section top-bar-section-c debugh">
+                <div><a href="#">Perchè Dropbox?</a></div>
+                <div><a href="#">Funzioni</a></div>
+                <div><a href="#">Piani e prezzi</a></div>
+            </section>
+            <section class="top-bar-section top-bar-section-r debugh">
+                <div><a href="#">Supporto</a></div>
+                <div><a href="#">Contatta l'ufficio vendite</a></div>
+                <div><a href="#">Accedi</a></div>
+                <div><a class="inizia" href="#">Inizia</a></div>
+            </section>
         </section>
         <section class="top-box debugh">
-            <section class="content-top debugh"></section>
+            <section class="content-top debugh">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <section class="header-text-box debugh">
+                    <h2>Finalmente tutti i tuoi strumenti contenuti e collaboratori sono accessibili dallo stesso posto. \n Dropbox Buisness è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</h2>
+                    <div>inizia la tua provaa gratuita</div>
+                    <h2>Annulla in qualsiasi momento</h2>
+                    <arrow>V</arrow>
+                </section>
+                <div class="header-image-box debugh">
+
+                </div>
+
+
+
+
+            </section>
         </section>
 
     </header>
