--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div><a href="#">Supporto</a></div>
                 <div><a href="#">Contatta l'ufficio vendite</a></div>
                 <div><a href="#">Accedi</a></div>
-                <div><a class="inizia" href="#">Inizia</a></div>
+                <div><a class="inizia" class="bbutton" href="#">Inizia</a></div>
             </section>
         </section>
         <section class="top-box debugh">
@@ -32,12 +32,12 @@
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <section class="header-text-box debugh">
                     <h2>Finalmente tutti i tuoi strumenti contenuti e collaboratori sono accessibili dallo stesso posto. \n Dropbox Buisness è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</h2>
-                    <div>inizia la tua provaa gratuita</div>
+                    <div><a class="bbutton" href="#">inizia la tua prova gratuita</a></div>
                     <h2>Annulla in qualsiasi momento</h2>
                     <arrow>V</arrow>
                 </section>
                 <div class="header-image-box debugh">
-
+                    <img src="img/jumbo.png" alt="foto boh">
                 </div>
 
 
@@ -51,8 +51,138 @@
 
     <!--main-->
     <main>
-        <section class="container-main debugm"></section>
+        <section class="container-main debugm">
+            <h1>Trova il piano Dropbox Buisness che fa per te</h1>
 
+            <section class="piani-main debugm">
+                <section class="fatturazione-main debugm"><!--sezione piani-->
+                    <div>Fatturazione mensile</div>
+                    <div>Fatturazione annuale</div>
+
+                    <section class="blocco-piani debugm">
+                        <section class="blocchi-piani blocchi-piani1 debugm">
+                            <h1>Singolo</h1>
+                            <hr>
+                            <h2>Professional</h2>
+                            <h3>19,99</h3>
+                            <h4>/mese</h4>
+                            <h5>1 utente</h5>
+                            <h5>3 TB di spazio di archiviazione sicuro</h5>
+                            <h5>Funzioni di produttività premium e condivisione di file semplice e sicura</h5>
+                            <div><a class="bbutton" href="#">Prova gratis per 30 giori</a></div>
+                            <h5>oppure</h5><div>acquista ora</div>
+                            <hr>
+                            <h2>Punti salienti del piano</h2>
+                            <ul>
+                                <li>Invia file fino a 100GB con Dropbox Transfer</li>
+                                <li>Cartelle offline su dispositivi mobili</li>
+                                <li>Pulizia remota dell'account</li>
+                                <li>Filigrana documento</li>
+                                <li>Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </section>
+
+                        <section class="blocchi-piani blocchi-piani2 debugm">
+                            <h1>Team</h1>
+                            <hr>
+                            <h2>Standard</h2>
+                            <h3>19,99</h3>
+                            <h4>utente/mese, a partire da 3 utenti</h4>
+                            <h5>1 utente</h5>
+                            <h5>3 TB di spazio di archiviazione sicuro</h5>
+                            <h5>Funzioni di produttività premium e condivisione di file semplice e sicura</h5>
+                            <div><a class="bbutton" href="#">Prova gratis per 30 giori</a></div>
+                            <h5>oppure</h5><div>acquista ora</div>
+                            <hr>
+                            <h2>Punti salienti del piano</h2>
+                            <ul>
+                                <li>Invia file fino a 100GB con Dropbox Transfer</li>
+                                <li>Cartelle offline su dispositivi mobili</li>
+                                <li>Pulizia remota dell'account</li>
+                                <li>Filigrana documento</li>
+                                <li>Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </section>
+
+                        <section class="blocchi-piani blocchi-piani3 debugm">
+                            <h1>Team</h1>
+                            <hr>
+                            <h2>Advanced</h2>
+                            <h3>19,99</h3>
+                            <h4>utente/mese, a partire da 3 utenti</h4>
+                            <h5>1 utente</h5>
+                            <h5>3 TB di spazio di archiviazione sicuro</h5>
+                            <h5>Funzioni di produttività premium e condivisione di file semplice e sicura</h5>
+                            <div><a class="bbutton" href="#">Prova gratis per 30 giori</a></div>
+                            <h5>oppure</h5><div>acquista ora</div>
+                            <hr>
+                            <h2>Punti salienti del piano</h2>
+                            <ul>
+                                <li>Invia file fino a 100GB con Dropbox Transfer</li>
+                                <li>Cartelle offline su dispositivi mobili</li>
+                                <li>Pulizia remota dell'account</li>
+                                <li>Filigrana documento</li>
+                                <li>Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </section>
+
+
+                        <section class="blocco-enterprise debugm">
+                            <h1>Team</h1>
+                            <hr>
+                            <h2>Enterprise</h2>
+                            <h3>Contatta l'ufficio vendite per i prezzi</h3>
+                            <h5>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</h5>
+                            <div><a class="bbutton" href="#">Contatta l'ufficio vendite</a></div>
+                        </section>
+
+                    </section>
+                </section> <!--fine sezione piani-->
+
+                <section class="partner-box debugm"> <!--sezione partner-->
+                    <div class="foto-partner debugx debugm"><img src="img/partner.png" alt=""> </div>
+                    <div class="text-partner debugx debugm">
+                        <h2>Entra in contatto con un pratner Dropbox</h2>
+                        <h3>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</h3>
+                        <div><a class="wbutton" href="#">Trova un partner</a></div>
+                    </div>
+                </section> <!--fine sezione partner-->
+
+
+                <section class="box-operazioni debugm"><!--sezione operazioni-->
+                    <h2>Esegui più operazioni con Dropbox Buisness</h2>
+
+                    <section class="operazioni-riga1 debugm">
+                        <section class="operazioni operazioni1 debugm">
+                            <img src="img/business-feature-switching-tools.png" alt="foto">
+                            <h2>Passa di meno da uno strumento all'altro</h2>
+                            <head>porta a termine le attività </head>
+                        </section>
+                        <section class="operazioni operazioni2 debugm">
+                            <img src="img/business-feature-coordinate-it.png" alt="foto">
+                        </section>
+                        <section class="operazioni operazioni3 debugm">
+                            <img src="img/business-feature-multi-device.png" alt="foto">
+                        </section>
+                    </section>
+                    <section class="operazioni-riga2 debugm">
+                        <section class="operazioni operazioni4 debugm">
+                            <img src="img/business-feature-integrations-it.png" alt="foto">
+                        </section>
+                        <section class="operazioni operazioni5 debugm">
+                            <img src="img/business-feature-send-files-it.png" alt="foto">
+                        </section>
+                        <section class="operazioni operazioni6 debugm">
+                            <img src="img/business-feature-security.png" alt="foto">
+                        </section>
+
+                    </section>
+                </section><!--fine sezione operazioni-->
+                
+
+            </section>
+
+        </section>
     </main>
     <!--/main-->
 
