--- a/index.html
+++ b/index.html
@@ -156,28 +156,43 @@
                         <section class="operazioni operazioni1 debugm">
                             <img src="img/business-feature-switching-tools.png" alt="foto">
                             <h2>Passa di meno da uno strumento all'altro</h2>
-                            <head>porta a termine le attività </head>
+                            <h3>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</h3>
                         </section>
                         <section class="operazioni operazioni2 debugm">
                             <img src="img/business-feature-coordinate-it.png" alt="foto">
+                            <h2>Passa di meno da uno strumento all'altro</h2>
+                            <h3>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</h3>
                         </section>
                         <section class="operazioni operazioni3 debugm">
                             <img src="img/business-feature-multi-device.png" alt="foto">
+                            <h2>Passa di meno da uno strumento all'altro</h2>
+                            <h3>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</h3>
                         </section>
                     </section>
                     <section class="operazioni-riga2 debugm">
                         <section class="operazioni operazioni4 debugm">
                             <img src="img/business-feature-integrations-it.png" alt="foto">
+                            <h2>Passa di meno da uno strumento all'altro</h2>
+                            <h3>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</h3>
                         </section>
                         <section class="operazioni operazioni5 debugm">
                             <img src="img/business-feature-send-files-it.png" alt="foto">
+                            <h2>Passa di meno da uno strumento all'altro</h2>
+                            <h3>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</h3>
                         </section>
                         <section class="operazioni operazioni6 debugm">
                             <img src="img/business-feature-security.png" alt="foto">
+                            <h2>Passa di meno da uno strumento all'altro</h2>
+                            <h3>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</h3>
                         </section>
 
                     </section>
+                    <section class="ckt debugm">
+                        <h2>Più di 500.000 team <br> utilizzano Dropbox Buisness</h2>
+                        <h3><a href="#">Scopri di più sui nosstri clienti</a></h3>
+                    </section>
                 </section><!--fine sezione operazioni-->
+
                 
 
             </section>
@@ -189,7 +204,21 @@
 
     <!--footer-->
     <footer>
-
+        <section class="designit-box debugf">
+            <section class="mediabox mediabox-section1 debugf">
+                <img src="img/designit.svg" alt="designit coso">
+                <img src="img/arizona_state_university.svg" alt="coso arizona">
+                <img src="img/university_of_florida.svg" alt="coso florida">
+                <img src="img/topps.svg" alt="coso toppe">
+            </section>
+            <div class="designit debugf">
+                <img src="img/designit.svg" alt="designit logo">
+                <hr>
+                <h3>I membri del nostro team lavoranto costantemente in Paesi, fusoriari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper</h3>
+                <h3>Morten Thomsen, Global IT Lead</h3>
+            </div>
+            <section class="mediabox mediabox-section2 debugf"></section>
+        </section>
     </footer>
     <!--/footer-->
 </body>
