aggiunta minwidth ad un container all'interno della barra per evitare che gli elementi si sovrapponessero

--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
     <!--header-->
     <header>
         <section class="top-bar debugh">
-            <section class="top-bar-section top-bar-section-l debugh">
-                <img src="img/logo-small.png" class="logo debug" alt="logo">
-            </section>
-            <section class="top-bar-section top-bar-section-c debugh">
-                <div><a href="#">Perchè Dropbox?</a></div>
-                <div><a href="#">Funzioni</a></div>
-                <div><a href="#">Piani e prezzi</a></div>
-            </section>
-            <section class="top-bar-section top-bar-section-r debugh">
-                <div><a href="#">Supporto</a></div>
-                <div><a href="#">Contatta l'ufficio vendite</a></div>
-                <div><a href="#">Accedi</a></div>
-                <div><a class="inizia" class="bbutton" href="#">Inizia</a></div>
+            <section class="top-bar-container">
+                <section class="top-bar-section top-bar-section-l debugh">
+                    <img src="img/logo-small.png" class="logo debug" alt="logo">
+                </section>
+                <section class="top-bar-section top-bar-section-c debugh">
+                    <div><a href="#">Perchè Dropbox?</a></div>
+                    <div><a href="#">Funzioni</a></div>
+                    <div><a href="#">Piani e prezzi</a></div>
+                </section>
+                <section class="top-bar-section top-bar-section-r debugh">
+                    <div><a href="#">Supporto</a></div>
+                    <div><a href="#">Contatta l'ufficio vendite</a></div>
+                    <div><a href="#">Accedi</a></div>
+                    <div><a class="inizia" class="bbutton" href="#">Inizia</a></div>
+                </section>
             </section>
         </section>
         <section class="top-box debugh">
