--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
                     <div><a href="#">Piani e prezzi</a></div>
                 </section>
                 <section class="top-bar-section top-bar-section-r debugh">
-                    <div><a href="#">Supporto</a></div>
+                    <div>
+                        <a id="supporto" href="#">Supporto</a>
+                        <div id="dropdown">
+                            <ul>
+                                <li><a href="#">Centro assistenza</a></li>
+                                <li><a href="#">Forum della comunity</a></li>
+                            </ul>
+                        </div>
+                    </div>
                     <div><a href="#">Contatta l'ufficio vendite</a></div>
                     <div><a href="#">Accedi</a></div>
                     <div><a class="inizia" class="bbutton" href="#">Inizia</a></div>
@@ -71,12 +79,12 @@
                             <h5>oppure</h5><div>acquista ora</div>
                             <h5><hr></h5>
                             <h2>Punti salienti del piano</h2>
-                            <ul>
-                                <li><i class="fa-solid fa-check"></i> Invia file fino a 100GB con Dropbox Transfer</li>
-                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fa-solid fa-check"></i> Pulizia remota dell'account</li>
-                                <li><i class="fa-solid fa-check"></i> Filigrana documento</li>
-                                <li><i class="fa-solid fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Invia file fino a 100GB con Dropbox Transfer</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Cartelle offline su dispositivi mobili</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Pulizia remota dell'account</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Filigrana documento</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Assistenza prioritaria via email e chat</li>
                             </ul>
                         </section>
 
@@ -92,12 +100,12 @@
                             <h5>oppure</h5><div>acquista ora</div>
                             <h5><hr></h5>
                             <h2>Punti salienti del piano</h2>
-                            <ul>
-                                <li><i class="fa-solid fa-check"></i> Invia file fino a 100GB con Dropbox Transfer</li>
-                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fa-solid fa-check"></i> Pulizia remota dell'account</li>
-                                <li><i class="fa-solid fa-check"></i> Filigrana documento</li>
-                                <li><i class="fa-solid fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Invia file fino a 100GB con Dropbox Transfer</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Cartelle offline su dispositivi mobili</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Pulizia remota dell'account</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Filigrana documento</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Assistenza prioritaria via email e chat</li>
                             </ul>
                         </section>
 
@@ -113,12 +121,12 @@
                             <h5>oppure</h5><div>acquista ora</div>
                             <h5><hr></h5>
                             <h2>Punti salienti del piano</h2>
-                            <ul>
-                                <li><i class="fa-solid fa-check"></i> Invia file fino a 100GB con Dropbox Transfer</li>
-                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fa-solid fa-check"></i> Pulizia remota dell'account</li>
-                                <li><i class="fa-solid fa-check"></i> Filigrana documento</li>
-                                <li><i class="fa-solid fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            <ul class="fa-ul">
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Invia file fino a 100GB con Dropbox Transfer</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Cartelle offline su dispositivi mobili</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Pulizia remota dell'account</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Filigrana documento</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-check"></i></span> Assistenza prioritaria via email e chat</li>
                             </ul>
                         </section>
 
