riorganizzazione della struttura

--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
                 <section class="top-bar-section top-bar-section-r debugh">
                     <div>
                         <a id="supporto" href="#">Supporto</a>
-                        <div id="dropdown">
+                        <div id="dropdown-supporto">
                             <ul>
                                 <li><a href="#">Centro assistenza</a></li>
                                 <li><a href="#">Forum della comunity</a></li>
