--- a/accedi/index.html
+++ b/accedi/index.html
@@ -1,1 +1,83 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        
+    </header>
+
+
+    <main>
+
+    </main>
+
+
+
+    <!--footer-->
+    <footer>
+        <section class="black-footer">
+            <section class="opzioni-black-footer">
+            <div>
+                <h2>Dropbox</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perchè Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Prodotti</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perchè Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+            </div>
+            <div>
+                <h2>Azienda</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perchè Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+            </div>
+            <div>
+                <h2>Supporto</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perchè Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+            </div>
+            <div>
+                <h2>Comunity</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perchè Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li>&#8202</li>
+                    <li>&#8202</li>
+            </div>
+            <section class="italiano">
+                <hr>
+                <h5><i class="fa-solid fa-earth-europe"></i> Italiano <i class="fa-solid fa-caret-up"></i></h5>
+            </section>    
+        </section>
+
+
+
+        </section>
+    </footer>
+    <!--/footer-->
+</body>
+</html>
