fine sezione accesso

--- a/accedi/index.html
+++ b/accedi/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +10,88 @@
 </head>
 <body>
     <header>
-        
+        <section id="header-elements">
+            <a href="#"  id="prova"><div class="prova">Prova Dropbox Buisness</div></a>
+            <a href="../index.html"><div><img src="../img/logo-small.png"></div></a>
+            <a href="#" id="scarica"><div class="scarica">Scarica l'app</div></a>
+        </section>
+        <hr>
     </header>
 
 
     <main>
+        <img src="../img/card-hand-access.png" class="debugm">
 
+        <section class="box-access debugm">
+            <h1>Accedi</h1>
+            <section id="box-crea-account"><h2>oppure </h2><a href="#"> crea un accoount</a></section>
+            <section id="bottoni-accesso">
+                <div><a href="#"><i class="fa-brands fa-google"></i>Accedi con google</a></div>
+                <div><a href="#"><i class="fa-brands fa-apple"></i>Accedi con Apple</a></div>
+            </section>
+            <hr><h3>oppure</h3><hr>
+            <section id="accesso" class="debugm">
+                <section class="testo">
+                    <input type="text" placeholder="Invia email">
+                    <input type="password" placeholder="Password">
+                </section>
+                <input type="checkbox" name="Ricordami" id="Ricordami">  <label for="Ricordami">Ricordami</label>
+                <div id="accedi-div"><a id="accedi" href="#">Accedi</a></div>
+                <a href="#">Hai dimetnicato la password?</a>
+            </section>
+
+
+
+        </section>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -60,21 +137,11 @@
                     <li><a href="#">Funzioni</a></li>
             </div>
             <div>
-                <h2>Comunity</h2>
-                <ul>
-                    <li><a href="#">Applicazione desktop</a></li>
-                    <li><a href="#">Perchè Dropbox</a></li>
-                    <li><a href="#">Piani</a></li>
-                    <li>&#8202</li>
-                    <li>&#8202</li>
+                <h5><i class="fa-solid fa-earth-europe"></i> Italiano <i class="fa-solid fa-caret-up"></i></h5>
             </div>
             <section class="italiano">
-                <hr>
-                <h5><i class="fa-solid fa-earth-europe"></i> Italiano <i class="fa-solid fa-caret-up"></i></h5>
             </section>    
         </section>
-
-
 
         </section>
     </footer>
