--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="top-bar debugh">
             <section class="top-bar-container">
                 <section class="top-bar-section top-bar-section-l debugh">
-                    <img src="img/logo-small.png" class="logo debug" alt="logo">
+                    <a href="index.html" id="logo-home"><img src="img/logo-small.png" class="logo debug" alt="logo"></a>
                 </section>
                 <section class="top-bar-section top-bar-section-c debugh">
                     <div><a href="#">Perchè Dropbox?</a></div>
