--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         <a id="supporto" href="#">Supporto</a>
                         <div id="dropdown-supporto">
                             <ul>
-                                <li><a href="#">Centro assistenza</a></li>
-                                <li><a href="#">Forum della comunity</a></li>
+                                <li><a href="#" class="dropdown-elements">Centro assistenza</a></li>
+                                <li><a href="#" class="dropdown-elements">Forum della comunity</a></li>
                             </ul>
                         </div>
                     </div>
