--- a/inizia/index.html
+++ b/inizia/index.html
@@ -32,8 +32,8 @@
                         </div>
                     </div>
                     <div><a href="#">Contatta l'ufficio vendite</a></div>
-                    <div><a href="accedi/index.html">Accedi</a></div>
-                    <div><a class="inizia" class="bbutton" href="inizia/index.html">Inizia</a></div>
+                    <div><a href="../accedi/index.html">Accedi</a></div>
+                    <div><a class="inizia" class="bbutton" href="index.html">Inizia</a></div>
                 </section>
             </section>
         </section>
